# UzlezzLanguage

./: .gitmodules  CMakeLists.txt  CMakeSettings.json
Code/: CMakeLists.txt  clang-format.txt
Code/Include/UzL/: Lexer.h  common.h  token.h
Code/Source/: Lexer.cpp  log.cpp  log.h  token.cpp
test/: CMakeLists.txt
test/source/: entry_point.cpp
